--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!-- Main navigation -->
 <header>
   <!--Navbar-->
-  <mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
+  <mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark black fixed-top scrolling-navbar">
     <mdb-navbar-brand>
       <!--a class="logo navbar-brand" href="#">AF</a-->
       <a class="logo navbar-brand" href="/">AF</a>
@@ -14,10 +14,19 @@
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li-->
         <li class="nav-item waves-light" mdbWavesEffect>
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="#">About Me</a>
         </li>
         <li class="nav-item waves-light" mdbWavesEffect>
-          <a class="nav-link" href="#">Profile</a>
+          <a class="nav-link" href="#">Experience</a>
+        </li>
+        <li class="nav-item waves-light" mdbWavesEffect>
+          <a class="nav-link" href="#">Projects</a>
+        </li>
+        <li class="nav-item waves-light" mdbWavesEffect>
+          <a class="nav-link" href="#">Education</a>
+        </li>
+        <li class="nav-item waves-light" mdbWavesEffect>
+          <a class="nav-link" href="#">Contact</a>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto nav-flex-icons">
@@ -60,18 +69,19 @@
           <!--Grid column-->
           <div class="col-md-12 mb-4 white-text text-center">
             <h1 class="display-3 h1-reponsive mb-0 pt-md-5 pt-5 wow fadeInDown"
-              data-wow-delay="0.3s">
+              data-wow-delay="0.6s">
               <strong>
                 Alex Fung
               </strong>
             </h1>
-            <hr class="hr-light my-4 wow fadeInDown" data-wow-delay="0.4s">
-            <h5 class="mb-4 white-text wow fadeInDown" data-wow-delay="0.4s">
+            <hr class="hr-light my-4 wow fadeInDown" data-wow-delay="0.6s">
+            <h5 class="mb-4 white-text wow fadeInDown" data-wow-delay="0.6s">
               <strong>
                 Machine Learning Engineer
               </strong>
             </h5>
-            <button mdbBtn type="button" class="btn btn-outline-light" data-mdb-ripple-color="dark" mdbWavesEffect>View Website</button>          </div>
+            <button mdbBtn type="button" class="btn btn-outline-light" data-mdb-ripple-color="dark" mdbWavesEffect>View Website</button>          
+          </div>
           <!--Grid column-->
         </div>
         <!--Grid row-->
@@ -84,6 +94,21 @@
 </header>
 <!-- Main navigation -->
 
-
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam qui ipsam itaque officiis ipsum et recusandae
-voluptatem tenetur. Quibusdam dolorem in totam quis necessitatibus blanditiis mollitia, inventore rem recusandae quo?
+<main class="text-center my-5">
+  <!-- Mask & flexbox options-->
+  <div class="container">
+    <div class="row">
+      <!--div class="col-md-12 mb-4 "-->
+        <!-- Grid column -->
+        <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
+          <div class="avatar mx-auto">
+            <h3>About Me</h3>
+            <h6>Hello! My name is Alex Fung. I am a Machine Learning Engineer who currently lives in Toronto. I have a passion for solving problems, especially in </h6>
+            <img src="../assets/images/self-photo-7.png" class="rounded-circle z-depth-1"
+            alt="Sample avatar">
+          </div>
+        </div>
+      <!--/div-->
+    </div>
+  </div>
+</main>
