Split into separate components for better coding practices.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,114 +1,10 @@
 <!-- Main navigation -->
 <header>
   <!--Navbar-->
-  <mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark black fixed-top scrolling-navbar">
-    <mdb-navbar-brand>
-      <!--a class="logo navbar-brand" href="#">AF</a-->
-      <a class="logo navbar-brand" href="/">AF</a>
-    </mdb-navbar-brand>
-    <!--insert vertical line to separate mdb-navbar-brand against links-->
-    <!--pressing the logo induces a bug where the logo is slightly cut off-->
-    <links>
-      <ul class="navbar-nav mr-auto">
-        <!--li class="nav-item active waves-light" mdbWavesEffect>
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li-->
-        <li class="nav-item waves-light" mdbWavesEffect>
-          <a class="nav-link" href="#">About Me</a>
-        </li>
-        <li class="nav-item waves-light" mdbWavesEffect>
-          <a class="nav-link" href="#">Experience</a>
-        </li>
-        <li class="nav-item waves-light" mdbWavesEffect>
-          <a class="nav-link" href="#">Projects</a>
-        </li>
-        <li class="nav-item waves-light" mdbWavesEffect>
-          <a class="nav-link" href="#">Education</a>
-        </li>
-        <li class="nav-item waves-light" mdbWavesEffect>
-          <a class="nav-link" href="#">Contact</a>
-        </li>
-      </ul>
-      <ul class="navbar-nav ml-auto nav-flex-icons">
-        <li class="nav-item">
-          <a class="nav-link waves-effect waves-light">
-            <i class="fab fa-strava fa-lg"></i>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link waves-effect waves-light">
-            <i class="fab fa-instagram fa-lg"></i>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link waves-effect waves-light">
-            <i class="fab fa-github fa-lg"></i>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link waves-effect waves-light">
-            <i class="fab fa-linkedin fa-lg"></i>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link waves-effect waves-light">
-            <i class="far fa-envelope fa-lg"></i>
-          </a>
-        </li>
-      </ul>
-    </links>
-  </mdb-navbar>
+  <app-navbar></app-navbar>
   <!-- Full Page Intro -->
-  <div class="view jarallax" style="background-image: url('../assets/images/DSC_1965-2.jpg'); background-repeat: no-repeat; background-size: cover; background-position: center center;">
-    <!-- Mask & flexbox options-->
-    <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
-      <!-- Content -->
-      <div class="container">
-        <!--Grid row-->
-        <div class="row">
-          <!--Grid column-->
-          <div class="col-md-12 mb-4 white-text text-center">
-            <h1 class="display-3 h1-reponsive mb-0 pt-md-5 pt-5 wow fadeInDown"
-              data-wow-delay="0.6s">
-              <strong>
-                Alex Fung
-              </strong>
-            </h1>
-            <hr class="hr-light my-4 wow fadeInDown" data-wow-delay="0.6s">
-            <h5 class="mb-4 white-text wow fadeInDown" data-wow-delay="0.6s">
-              <strong>
-                Machine Learning Engineer
-              </strong>
-            </h5>
-            <button mdbBtn type="button" class="btn btn-outline-light" data-mdb-ripple-color="dark" mdbWavesEffect>View Website</button>          
-          </div>
-          <!--Grid column-->
-        </div>
-        <!--Grid row-->
-      </div>
-      <!-- Content -->
-    </div>
-    <!-- Mask & flexbox options-->
-  </div>
-  <!-- Full Page Intro -->
+  <app-full-page-intro></app-full-page-intro>
 </header>
-<!-- Main navigation -->
 
-<main class="text-center my-5">
-  <!-- Mask & flexbox options-->
-  <div class="container">
-    <div class="row">
-      <!--div class="col-md-12 mb-4 "-->
-        <!-- Grid column -->
-        <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
-          <div class="avatar mx-auto">
-            <h3>About Me</h3>
-            <h6>Hello! My name is Alex Fung. I am a Machine Learning Engineer who currently lives in Toronto. I have a passion for solving problems, especially in </h6>
-            <img src="../assets/images/self-photo-7.png" class="rounded-circle z-depth-1"
-            alt="Sample avatar">
-          </div>
-        </div>
-      <!--/div-->
-    </div>
-  </div>
-</main>
+<!--About Me Section-->
+<app-about-me></app-about-me>
