Added new components for the new sections. Altered some of the CSS as well so the theme is more black

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,3 +8,12 @@
 
 <!--About Me Section-->
 <app-about-me></app-about-me>
+
+<!--Experience Section-->
+<app-experience></app-experience>
+
+<!--Projects Section-->
+<app-projects></app-projects>
+
+<!--Contact Me Section-->
+<app-contact-me></app-contact-me>
