--- a/src/app/contact-me/contact-me.component.html
+++ b/src/app/contact-me/contact-me.component.html
@@ -6,10 +6,7 @@
           <!-- Grid column -->
           <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
             <div class="avatar mx-auto text-white">
-              <h3>About Me</h3>
-              <h6>Hello! My name is Alex Fung. I am a Machine Learning Engineer who currently lives in Toronto. I have a passion for solving problems, especially in </h6>
-              <img src="../assets/images/self-photo-7.png" class="rounded-circle z-depth-1"
-              alt="Sample avatar">
+              <h3>Contact Me</h3>
             </div>
           </div>
         <!--/div-->
