--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark black fixed-top scrolling-navbar">
     <mdb-navbar-brand>
       <!--a class="logo navbar-brand" href="#">AF</a-->
-      <a class="logo navbar-brand" href="/">AF</a>
+      <a class="logo navbar-brand mr-5" href="/">AF</a>
     </mdb-navbar-brand>
     <!--insert vertical line to separate mdb-navbar-brand against links-->
     <!--pressing the logo induces a bug where the logo is slightly cut off-->
@@ -19,36 +19,36 @@
         <li class="nav-item waves-light" mdbWavesEffect>
           <a class="nav-link" href="#">Projects</a>
         </li>
-        <li class="nav-item waves-light" mdbWavesEffect>
+        <!--li class="nav-item waves-light" mdbWavesEffect>
           <a class="nav-link" href="#">Education</a>
-        </li>
+        </li-->
         <li class="nav-item waves-light" mdbWavesEffect>
           <a class="nav-link" href="#">Contact</a>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto nav-flex-icons">
         <li class="nav-item">
-          <a class="nav-link waves-effect waves-light">
+          <a class="nav-link waves-effect waves-light" href="https://www.strava.com/athletes/59858467" target="_blank">
             <i class="fab fa-strava fa-lg"></i>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link waves-effect waves-light">
+          <a class="nav-link waves-effect waves-light" href="https://www.instagram.com/alexfungus/" target="_blank">
             <i class="fab fa-instagram fa-lg"></i>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link waves-effect waves-light">
+          <a class="nav-link waves-effect waves-light" href="https://github.com/alexf388" target="_blank">
             <i class="fab fa-github fa-lg"></i>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link waves-effect waves-light">
+          <a class="nav-link waves-effect waves-light" href="https://www.linkedin.com/in/alexf388/" target="_blank">
             <i class="fab fa-linkedin fa-lg"></i>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link waves-effect waves-light">
+          <a class="nav-link waves-effect waves-light" href="mailto:alexchunkwan.fung@gmail.com" targe="_blank">
             <i class="far fa-envelope fa-lg"></i>
           </a>
         </li>
